trx and ring pages update

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,13 @@ h6 {
   font-style: italic;
 }
 
+
+a {
+  text-align: none;
+  color: black;
+  cursor: pointer;
+}
+
+a:hover {
+  color: #C2E5D3; 
+}
