--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,31 @@ body {
   font-family: 'Rubik', sans-serif;
 }
 :root {
-  --primary: #9d9f9e;
-  --secondary: #8a3e4a;
-  --tertiary: #a2e64f;
-  --light: #fae3b4;
+  --grey: #9d9f9e;
+  --red: #8a3e4a;
+  --green: #a2e64f;
+  --tan: #fae3b4;
+  --brown: #8b6342;
+}
+
+.background-grey {
+  background-color: var(--grey);
+}
+
+.background-red {
+  background-color: var(--red);
+}
+
+.background-green {
+  background-color: var(--green);
+}
+
+.background-tan {
+  background-color: var(--tan);
+}
+
+.background-brown {
+  background-color: var(--brown);
 }
 
 h1,
